# taskmanager

./: README.md  alembic.ini  main.py  pyproject.toml
app/api/dependencies/: websocket.py
app/api/endpoints/: tasks.py  users.py
app/api/schemas/: task.py  user.py  websocket.py
app/core/: config.py  jwt.py
app/db/: database.py
app/db/crud/: refresh_token.py  task.py  user.py
app/db/models/: base.py  refresh_token.py  task.py  user.py
app/log/: log_config.py
migrations/: env.py
migrations/versions/: 2023_11_06_1944-51a01dbd2031_initial.py
